fix more button caused alignment regression
- Because we have a new top-bar wrapper for more button in overflow group-popup creates the distorted view while we unfold any group
- to tackle this situation on unfold we need role back to the original html structure of overflow-group
- this patch will fix that issue

--- a/browser/css/toolbar.css
+++ b/browser/css/toolbar.css
@@ -120,7 +120,7 @@
 	margin: 0px;
 }
 
-.ui-overflow-group-popup > .top-row-overflow-group {
+.top-row-overflow-group {
 	display: flex;
 }
 /* overflow menu */
